fixed headshot alignment

--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ main {
   height: 650px;
   width: 475px;
   top: 0;
-  right: 11px;
+  right: 15px;
 }
 
 
